[tool.poetry]
name = "message-db-py"
version = "0.3.1"
description = "The Python interface to the MessageDB Event Store and Message Store"
authors = ["Subhash Bhushan <subhash.bhushan@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

keywords = [
    "message-db",
    "event-sourcing",
    "event-store",
    "messaging",
    "cqrs",
    "command-query-responsibility-segregation",
    "events",
    "streaming",
    "database",
    "postgresql",
    "python",
    "async",
    "microservices",
    "distributed-systems",
    "message-queue",
    "event-driven",
    "real-time"
]

packages = [
    { include = "message_db", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.11"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^26.1.0"
isort = "^8.0.0"
mypy = "^1.19.1"
nox = "^2026.2.9"
pre-commit = "^4.5.1"
types-psycopg2 = "^2.9.21.20251012"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source = ["src/message_db"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
